<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/navigation_sales"
        android:icon="@drawable/ic_sales"
        android:title="@string/sales" />
    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_products"
        android:title="@string/products" />
    <item
        android:id="@+id/navigation_vendors"
        android:icon="@drawable/ic_vendors"
        android:title="@string/vendors" />
    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_expenses"
        android:title="@string/expenses" />
</menu>
